# multi-ghc-travis

./: .travis.yml  multi-ghc-travis.cabal
