name:                 multi-ghc-travis
version:              0.1.0.1
synopsis:             Creates .travis.yml file for Travis-CI integration
description:
  This is a fork and extension of https://github.com/hvr/multi-ghc-travis
  to simply make it a hackage library so it can be depended upon by other packages.
license: MIT
license-file: LICENSE
homepage:             
author:               Herbert Valerio Riedel, Clinton Mead (package wrapper)
maintainer:           clintonmead@gmail.com
category:             Github
copyright:            (c) Herbert Valerio Riedel, Clinton Mead
build-type:           Simple
extra-source-files:
cabal-version:        >=1.10
tested-with: GHC == 8.0.2
bug-reports: https://github.com/clintonmead/multi-ghc-travis/issues

source-repository head
  type: git
  location: https://github.com/clintonmead/multi-ghc-travis.git

library
  exposed-modules:
  other-modules:        Main
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src, .
  default-language:     Haskell2010
